[gd_scene load_steps=20 format=3 uid="uid://bjy3dntpbsi5e"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemy/Slime/Blue Slime/BlueSlime.gd" id="1_i536c"]
[ext_resource type="Script" path="res://MasterClasses/EnemyClass.gd" id="2_3c1mm"]
[ext_resource type="Texture2D" uid="uid://duf6qh1k575vk" path="res://Assets/Characters/Blue Slime/Blue Slime SpriteSheet.png" id="3_c6vta"]
[ext_resource type="PackedScene" uid="uid://bnt6rtdi8wa68" path="res://Scenes/Modular/UI/NPCUI.tscn" id="4_m16f1"]
[ext_resource type="Script" path="res://Scenes/Modular/Boxes/DetectionBox.gd" id="5_aea6b"]

[sub_resource type="Resource" id="Resource_v20fp"]
script = ExtResource("2_3c1mm")
Name = "Blue Slime"
classtype = "Slime"
level = 0.0
Strength = 5.0
Dexterity = 5.0
Constitution = 5.0
Intelligence = 5.0
Wisdom = 5.0
Charisma = 5.0
currentxp = 0.0
requiredxp = 0.0
overallexp = 0.0
statpoints = 0.0

[sub_resource type="Animation" id="Animation_rdrfg"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jns43"]
resource_name = "castdown"
length = 0.001

[sub_resource type="Animation" id="Animation_nht4d"]
resource_name = "castleft"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yqd8m"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_xl843"]
resource_name = "hit"
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="Animation" id="Animation_te23l"]
resource_name = "idleleft"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uhc0j"]
resource_name = "idleright"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_im11b"]
resource_name = "sprint"
length = 1.3
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_1duv0"]
resource_name = "walkleft"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_c1hgn"]
resource_name = "walkright"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17n6p"]
_data = {
"RESET": SubResource("Animation_rdrfg"),
"castdown": SubResource("Animation_jns43"),
"castleft": SubResource("Animation_nht4d"),
"death": SubResource("Animation_yqd8m"),
"hit": SubResource("Animation_xl843"),
"idleleft": SubResource("Animation_te23l"),
"idleright": SubResource("Animation_uhc0j"),
"sprint": SubResource("Animation_im11b"),
"walkleft": SubResource("Animation_1duv0"),
"walkright": SubResource("Animation_c1hgn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_s4mub"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i8ot6"]
radius = 7.0

[node name="BlueSlime" type="CharacterBody2D" groups=["BlueSlime"]]
z_index = 2
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 143
wall_min_slide_angle = 0.0
script = ExtResource("1_i536c")
slimestats = SubResource("Resource_v20fp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("3_c6vta")
flip_h = true
hframes = 7
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_17n6p")
}

[node name="Collisionbubble" type="CollisionShape2D" parent="." groups=["Slime"]]
light_mask = 3
visibility_layer = 3
shape = SubResource("CircleShape2D_s4mub")

[node name="Timers" type="Node" parent="."]

[node name="StateMachine" type="Timer" parent="Timers"]
autostart = true

[node name="Regeneration" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="UI" parent="." instance=ExtResource("4_m16f1")]

[node name="BoxHolder" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="BoxHolder" groups=["BlueSlimeHitbox"]]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoxHolder/Hitbox"]
shape = SubResource("CircleShape2D_i8ot6")

[node name="DamageBox" type="Area2D" parent="BoxHolder" groups=["BlueSlimeDamageBox"]]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoxHolder/DamageBox"]

[node name="DetectionBox" type="Area2D" parent="BoxHolder"]
collision_layer = 64
collision_mask = 519
script = ExtResource("5_aea6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoxHolder/DetectionBox"]

[connection signal="timeout" from="Timers/StateMachine" to="." method="StateReset"]
[connection signal="timeout" from="Timers/Regeneration" to="." method="RegenTimer"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="hitTimer"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="deathTimer"]
[connection signal="area_entered" from="BoxHolder/Hitbox" to="." method="HitboxEntered"]
[connection signal="area_entered" from="BoxHolder/DamageBox" to="BoxHolder/DamageBox" method="DamageBoxEntered"]

[editable path="UI"]
